# LetsWatch

./: LICENSE  README.md  pyproject.toml  requirements.txt
backend/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/data/: nenuzhniypyfile.py
backend/src/: .env  .env.example  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2025_05_18_1524-3154cdf676d2_add_unique_constraint.py
backend/src/api/: dependencies.py
backend/src/api/routers/: __init__.py  movies.py  reviews.py  users.py
backend/src/api/services/: movies.py  reviews.py  users.py
backend/src/core/: config.py  database.py
backend/src/core/models/: reviews.py  users.py
backend/src/core/schemas/: movies.py  reviews.py  users.py
backend/src/search_model/: search.py
backend/src/search_modell/: search.py
bot/: .gitignore  pyproject.toml  requirements.txt
bot/src/: .env  .env.example  config.py  http_client.py  run.py
bot/src/handlers/: __init__.py  lexicon.py  start.py  start_search.py
bot/src/keyboards/: inline.py
bot/src/model/: model_search.py
search_model/: database_analysis.ipynb  search.py  upload_colums.py
src/: .env.example  config.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_07_1946-49338c07a086_init_migration.py  2025_05_07_1957-8843515a1664_rename_created_date_name.py  2025_05_13_2112-660c04a63a13_init_migration.py  2025_05_14_0035-e5daad1e4e6b_create_reviews.py  2025_05_17_1741-85775587bc33_create_reviews_model.py
src/api/: README.md  dependencies.py  exceptions.py  main.py
src/api/models/: __init__.py  (+2 more)
src/core/: config.py  database.py
src/database/: core.py
(+15 files in other folders)
